[package]
name        = "gaussclaw-agent"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Hermes AIAgent.run_conversation lifted into a Differential Turn Engine policy."

[lints]
workspace = true

[dependencies]
gauss-core   = { workspace = true }
gauss-traits = { workspace = true }
gauss-kernel = { workspace = true }

[dev-dependencies]
gauss-kernel = { workspace = true }
