[package]
name        = "gaussclaw-agent"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Hermes AIAgent.run_conversation lifted into a Differential Turn Engine policy."

[lints]
workspace = true

[dependencies]
gauss-core   = { workspace = true }
gauss-traits = { workspace = true }
gauss-kernel = { workspace = true }
gauss-audit  = { workspace = true }
gaussclaw-store = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
blake3       = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
time         = { workspace = true }

[dev-dependencies]
tokio        = { workspace = true, features = ["test-util", "macros"] }
