[package]
name        = "gaussclaw-api-modes"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Chat-completion, responses, and OpenAI-compatible API mode shims."

[lints]
workspace = true

[dependencies]
