[package]
name        = "gaussclaw-bin"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "The shipping `gaussclaw` binary; wires every gaussclaw-* crate together."

[lints]
workspace = true

[dependencies]
