[package]
name        = "gaussclaw-channels"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Messaging channel adapters (Slack, Discord, Telegram, Matrix, ...)."

[lints]
workspace = true

[dependencies]
