[package]
name        = "gaussclaw-cli"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "clap v4 subcommand surface: model, tools, config, gateway, setup, update, doctor."

[lints]
workspace = true

[dependencies]
