[package]
name        = "gaussclaw-config"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Hermes-compatible TOML configuration loader (figment-based)."

[lints]
workspace = true

[dependencies]
