[package]
name        = "gaussclaw-conformance"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Hermes-parity test suite: replay, OAI SDK, CLI, TUI, web e2e, desktop e2e."

[lints]
workspace = true

[dependencies]
