[package]
name        = "gaussclaw-conformance"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Hermes-parity test suite: replay, OAI SDK, CLI, TUI, web e2e, desktop e2e."

[lints]
workspace = true

[dependencies]
gaussclaw-cli       = { workspace = true }
gaussclaw-surfaces  = { workspace = true }
gaussclaw-store     = { workspace = true }
gaussclaw-agent     = { workspace = true }
gaussclaw-providers = { workspace = true }
gauss-core          = { workspace = true }
clap                = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }

[dev-dependencies]
insta        = { workspace = true }
axum         = { workspace = true }
tokio        = { workspace = true, features = ["test-util", "macros"] }
tower        = { workspace = true }
serde_json   = { workspace = true }
gauss-audit  = { workspace = true }
