[package]
name        = "gaussclaw-desktop"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Tauri 2 desktop shell superseding the Electron-based Hermes Desktop."

[lints]
workspace = true

[dependencies]
