[package]
name        = "gaussclaw-export"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "SFT and DPO writer with Cryptographic Trajectory Envelope and Taint Filter."

[lints]
workspace = true

[dependencies]
gauss-core      = { workspace = true }
gauss-audit     = { workspace = true }
gaussclaw-store = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
sha2            = { workspace = true }
hex             = { workspace = true }
tokio           = { workspace = true, features = ["sync", "io-util", "fs"] }
async-trait     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt", "rt-multi-thread"] }
