[package]
name        = "gaussclaw-fed"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Federated Trajectory Pool client and reference server."

[lints]
workspace = true

[dependencies]
