[package]
name        = "gaussclaw-migrate"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Migration utilities: `gaussclaw import hermes ./hermes-config.toml`."

[lints]
workspace = true

[dependencies]
