[package]
name        = "gaussclaw-providers-meta"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "OpenRouter aggregator and NotDiamond learned router under RouterProviderTrait."

[lints]
workspace = true

[dependencies]
