[package]
name        = "gaussclaw-providers"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Twenty leaf vendor drivers under ProviderTrait + polyhedral equivalence."

[lints]
workspace = true

[dependencies]
