[package]
name        = "gaussclaw-skill"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Skill Manifest parser and the #[tool] proc-macro."

[lints]
workspace = true

[dependencies]
