[package]
name        = "gaussclaw-store"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Hermes session and lineage schema atop the SurrealDB Trinity substrate."

[lints]
workspace = true

[dependencies]
